# sternhalma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
pico/: .gitignore  CMakeLists.txt  PreLoad.cmake  README.md
pico/.github/workflows/: build.yml
pico/application/: CMakeLists.txt  app_config.h  hw_buttons.cpp  hw_buttons.h  hw_leds.cpp  hw_leds.h  main.cpp  neopixel.cpp
pico/application/debounce/: CMakeLists.txt  debouncer.h
pico/application/game_board/: CMakeLists.txt  game_board.h
pico/application/ws2812/: CMakeLists.txt  README.md  ws2812.cpp  ws2812.h
pico/lib/: CMakeLists.txt
pico/lib/onboard_led/: CMakeLists.txt  onboard_led.h  onboard_led_pico.c  onboard_led_pico_w.c
pico/scripts/: build.sh  ci.sh  install_dependencies.sh  setup.sh  unsetup.sh
protocol/: sternhalma_protocol.h
sternhalma/: sternhalma.cpp  sternhalma.h
