if (PICO_BOARD STREQUAL pico)
    add_library(onboard_led onboard_led_pico.c)
    target_link_libraries(onboard_led PRIVATE pico_stdlib)
    target_include_directories(onboard_led PUBLIC .)
elseif (PICO_BOARD STREQUAL pico_w)
    add_library(onboard_led onboard_led_pico_w.c)
    target_link_libraries(onboard_led PRIVATE pico_stdlib pico_cyw43_arch_none)
    target_include_directories(onboard_led PUBLIC .)
endif()
